--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "@tanstack/react-query": "^4.29.12",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
